--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "react-router": "^3.0.0"
+    "draft-js": "^0.9.1",
+    "firebase": "^3.6.1",
+    "font-awesome": "^4.7.0",
+    "normalize.css": "^5.0.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-promise-middleware": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
